src/test/deca/syntax/invalid/ident_var4.deca
//Description
//    Vérifier les noms d'ident uniques
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 9

{
int return = 3;
}
